Views Web.config - Build Action set to None

--- a/src/Feature/FormFieldsMapper/code/SitecoreMods.Feature.FormFieldsMapper/SitecoreMods.Feature.FormFieldsMapper.csproj
+++ b/src/Feature/FormFieldsMapper/code/SitecoreMods.Feature.FormFieldsMapper/SitecoreMods.Feature.FormFieldsMapper.csproj
@@ -155,7 +155,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <None Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
