--- a/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/SitecoreMods.Feature.FormFieldsMapper.csproj
+++ b/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/SitecoreMods.Feature.FormFieldsMapper.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Config\Include\Feature\Feature.FormFieldsMapper.Serialization.config" />
     <None Include="Properties\PublishProfiles\Debug.pubxml" />
     <None Include="Web.config" />
     <Content Include="Web.Debug.config">
