--- a/src/Foundation/Serialization/website/SitecoreMods.Foundation.Serialization/SitecoreMods.Foundation.Serialization.csproj
+++ b/src/Foundation/Serialization/website/SitecoreMods.Foundation.Serialization/SitecoreMods.Foundation.Serialization.csproj
@@ -93,6 +93,7 @@
     <Content Include="App_Config\Include\Rainbow.config" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.zSharedSecret.config.example" />
     <Content Include="App_Config\Include\Foundation\Foundation.Serialization.Base.config" />
+    <Content Include="App_Config\Include\Foundation\Foundation.SitecoreMods.Serialization.config" />
     <None Include="App_Config\Include\Unicorn\Unicorn.UI.IdentityServer.config" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.UI.DeployedContentEditorWarnings.config.disabled" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.UI.config" />
