--- a/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/packages.config
+++ b/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/packages.config
@@ -9,5 +9,7 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Sitecore.Kernel" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Mvc" version="10.3.0" targetFramework="net48" />
+  <package id="Sitecore.Speak.Client" version="10.3.0" targetFramework="net48" />
+  <package id="Sitecore.Speak.Components" version="10.3.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
