FormFieldsMapper Styling updates

--- a/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/SitecoreMods.Feature.FormFieldsMapper.csproj
+++ b/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/SitecoreMods.Feature.FormFieldsMapper.csproj
@@ -175,6 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\Feature\Feature.FormFieldsMapper.Serialization.config" />
+    <Content Include="App_Config\Include\Feature\Feature.FormFieldsMapper.Pipelines.config" />
     <None Include="Properties\PublishProfiles\Debug.pubxml" />
     <None Include="Web.config" />
     <Content Include="sitecore\shell\client\Applications\FormsBuilder\Layouts\Actions\SitecoreMods\SubmitToAPI\SubmitToAPI.js" />
