--- a/src/Foundation/Serialization/website/App_Config/Include/Foundation/Foundation.Serialization.Settings.config
+++ b/src/Foundation/Serialization/website/App_Config/Include/Foundation/Foundation.Serialization.Settings.config
@@ -2,6 +2,23 @@
                xmlns:role="http://www.sitecore.net/xmlconfig/role/"
                xmlns:set="http://www.sitecore.net/xmlconfig/set/">
   <sitecore role:require="Standalone or ContentManagement">
+
+    <settings>
+      <!--  Rainbow - SERIALIZATION FOLDER PATH MAX LENGTH
+              In Windows, there is 248 characters limit on the lenght of file system paths. To avoid exceeding the maximum path length, Rainbow will loop
+                      long paths back to the root. This setting specifies the maximum length of the path to the serialization root path,
+                      which determines how long item paths can be before they are looped.
+              Important: The value of this setting must be the same on all Sitecore instances accessing the serialized data. 
+              Important: When changing this value, you must reserialize all configurations!
+              Example: A value of "90" for this setting will mean that item paths longer than 150 characters will be shortened, since Sitecore 
+              reserves 8 characters (and 248 - 8 - 90 = 150). 
+              Default value: 90
+            -->
+
+      <setting name="Rainbow.SFS.SerializationFolderPathMaxLength" value="150" />
+      <setting name="Rainbow.SFS.MaxItemNameLengthBeforeTruncation" value="50" />
+    </settings>
+    
     <!--
         This allows us to change the Unicorn root by using a ITEM_SYNC_LOCATION environment variable.
         For local development, we can mount our source root to the provided location.
