--- a/src/Feature/FormFieldsMapper/serialization/SubmitToAPI/SubmitToAPI.yml
+++ b/src/Feature/FormFieldsMapper/serialization/SubmitToAPI/SubmitToAPI.yml
@@ -34,10 +34,20 @@ SharedFields:
           ph="Page.Body"
           uid="{3F510E17-BE4F-4653-9956-11589A6BF5C8}" />
         <r
-          id="{D0182EB4-CE4C-4051-81B2-09D049F9D375}"
-          par="Id=FormFieldsMapper"
+          id="{08994B8F-7BF1-4963-815D-0FA8D75B3D86}"
+          par="Id=MainBorder"
           ph="Page.Body"
-          uid="{7FAD83C1-4422-402C-A947-CB87A019F66F}" />
+          uid="{CC1AB8BC-76DE-4664-AC58-CB91B4425594}" />
+        <r
+          id="{08994B8F-7BF1-4963-815D-0FA8D75B3D86}"
+          par="Id=FormFieldsMapperBorder"
+          ph="MainBorder.Content"
+          uid="{1FA350A8-1052-479C-92DD-3C9077C64327}" />
+        <r
+          id="{0F9D2A0C-07F9-475F-9331-E66A42B32F07}"
+          par="Id=FormFieldsMapper"
+          ph="FormFieldsMapperBorder.Content"
+          uid="{7E887FE0-DBB0-4872-AD8F-20A4E93CF77C}" />
       </d>
     </r>
 Languages:
