--- a/src/Feature/FormFieldsMapper/website/packages.config
+++ b/src/Feature/FormFieldsMapper/website/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Sitecore.ExperienceForms" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Kernel" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Mvc" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Speak.Client" version="10.3.0" targetFramework="net48" />
