--- a/src/Foundation/Authorization/website/SitecoreMods.Foundation.Authorization.csproj
+++ b/src/Foundation/Authorization/website/SitecoreMods.Foundation.Authorization.csproj
@@ -43,7 +43,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IdentityModel, Version=3.10.10.0, Culture=neutral, PublicKeyToken=e7877f4675df049f, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\IdentityModel.3.10.10\lib\net452\IdentityModel.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.6.0.0\lib\net461\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Http, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Extensions.Http.6.0.0\lib\net461\Microsoft.Extensions.Http.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Sitecore.Kernel">
+      <HintPath>..\..\..\..\packages\Sitecore.Kernel.10.3.0\lib\net48\Sitecore.Kernel.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -97,11 +114,30 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\Foundation\Foundation.Authorization.Serialization.config" />
+    <Content Include="App_Config\Include\Foundation\Foundation.Authorization.config" />
     <None Include="Properties\PublishProfiles\Debug.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\AuthorizationTypes.cs" />
+    <Compile Include="Extensions\DictionaryExtensions.cs" />
+    <Compile Include="Factory\RequestFactory.cs" />
+    <Compile Include="Fields\ApiIntegrationFieldIDs.cs" />
+    <Compile Include="Interfaces\IApiIntegrationService.cs" />
+    <Compile Include="Models\AuthorizationParameters.cs" />
+    <Compile Include="Models\AuthorizationSettings.cs" />
+    <Compile Include="Models\RequestSettings.cs" />
+    <Compile Include="Models\ResponseData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestTypes\ApiKeyRequest.cs" />
+    <Compile Include="RequestTypes\BaseOAuth2Request.cs" />
+    <Compile Include="RequestTypes\BaseRequest.cs" />
+    <Compile Include="RequestTypes\BasicRequest.cs" />
+    <Compile Include="RequestTypes\OAuth2ClientCredentialsGrantRequest.cs" />
+    <Compile Include="RequestTypes\OAuth2PasswordCredentialsGrantRequest.cs" />
+    <Compile Include="RequestTypes\PlainRequest.cs" />
+    <Compile Include="ServicesConfigurator.cs" />
+    <Compile Include="Services\ApiIntegrationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\web.config" />
@@ -114,8 +150,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Client\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Folder Include="Types\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
