--- a/src/Foundation/Authorization/website/SitecoreMods.Foundation.Authorization.csproj
+++ b/src/Foundation/Authorization/website/SitecoreMods.Foundation.Authorization.csproj
@@ -54,6 +54,9 @@
     </Reference>
     <Reference Include="Microsoft.Extensions.Http, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Microsoft.Extensions.Http.6.0.0\lib\net461\Microsoft.Extensions.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <Private>False</Private>
     </Reference>
     <Reference Include="Sitecore.Kernel">
@@ -120,7 +123,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\AuthorizationTypes.cs" />
+    <Compile Include="Enums\SerializationType.cs" />
     <Compile Include="Extensions\DictionaryExtensions.cs" />
+    <Compile Include="Extensions\RequestSettingsExtensions.cs" />
     <Compile Include="Factory\RequestFactory.cs" />
     <Compile Include="Fields\ApiIntegrationFieldIDs.cs" />
     <Compile Include="Interfaces\IApiIntegrationService.cs" />
