ApiIntegrations configurations root

--- a/src/Foundation/Authorization/website/App_Config/Include/Foundation/Foundation.Authorization.Serialization.config
+++ b/src/Foundation/Authorization/website/App_Config/Include/Foundation/Foundation.Authorization.Serialization.config
@@ -6,6 +6,9 @@
           <predicate>
             <include name="Settings" database="master" path="/sitecore/system/Settings/SitecoreMods/Authorization" />
             <include name="Templates" database="master" path="/sitecore/templates/Foundation/SitecoreMods/Authorization" />
+            <include name="ApiIntegrations" database="master" path="/sitecore/system/ApiIntegrations">
+              <exclude children="true" />
+            </include>
           </predicate>
         </configuration>
       </configurations>
