--- a/src/Feature/FormFieldsMapper/serialization/SubmitToApiCore/SubmitToApi.yml
+++ b/src/Feature/FormFieldsMapper/serialization/SubmitToApiCore/SubmitToApi.yml
@@ -35,7 +35,7 @@ SharedFields:
           uid="{CC1AB8BC-76DE-4664-AC58-CB91B4425594}" />
         <r
           id="{7CE24006-7B34-4678-BC91-7675C6E2C9B9}"
-          par="TabVisualStyle=Progressive&amp;IsVisible=1&amp;DisplayFieldName=Header&amp;ConfigurationItem=%7b649F31EC-352D-4BE4-9AA8-0C71EC884630%7d&amp;Id=Tabs"
+          par="TabVisualStyle=Progressive&amp;IsStateDiscarded=1&amp;IsVisible=1&amp;DisplayFieldName=Header&amp;ConfigurationItem=%7b649F31EC-352D-4BE4-9AA8-0C71EC884630%7d&amp;Id=Tabs"
           ph="MainBorder.Content"
           uid="{30133FD9-4244-44E5-9B41-DED5D1976A9D}" />
       </d>
