--- a/src/Foundation/Authorization/serialization/Templates/Authorization/Types/ApiKey/Configuration/AddTo.yml
+++ b/src/Foundation/Authorization/serialization/Templates/Authorization/Types/ApiKey/Configuration/AddTo.yml
@@ -24,6 +24,10 @@ SharedFields:
   Value: 1
 Languages:
 - Language: en
+  Fields:
+  - ID: "19a69332-a23e-4e70-8d16-b2640cb24cc8"
+    Hint: Title
+    Value: Add To
   Versions:
   - Version: 1
     Fields:
