--- a/src/Foundation/Authorization/serialization/Templates/Authorization/Base/_Authorization/Authorization/Authorization.yml
+++ b/src/Foundation/Authorization/serialization/Templates/Authorization/Base/_Authorization/Authorization/Authorization.yml
@@ -7,7 +7,7 @@ DB: master
 SharedFields:
 - ID: "1eb8ae32-e190-44a6-968d-ed904c794ebf"
   Hint: Source
-  Value: "query:../*[@@templatename='AuthorizationFolder']//*[@@templatename='Basic' or @@templatename='ApiKey'or @@templatename='OAuth2ClientCredentialsGrant' or @@templatename='OAuth2PasswordCredentialsGrant']"
+  Value: "query:../*[@@templatename='AuthorizationFolder']//*[@@templatename='BasicAuth' or @@templatename='ApiKey'or @@templatename='OAuth2ClientCredentialsGrant' or @@templatename='OAuth2PasswordCredentialsGrant']"
 - ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
   Hint: Type
   Value: Droplink
